--- a/Thesis/res/layout/ocr_page.xml
+++ b/Thesis/res/layout/ocr_page.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
@@ -7,45 +7,54 @@
     tools:context="com.myapp.thesis.MainActivity"
     tools:ignore="MergeRootFrame" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:background="#00000000"
-        android:textSize="20dp" />
-
-    <Button
-        android:id="@+id/startCalcu"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="52dp"
-        android:background="#159b9b"
-        android:onClick="procResult"
-        android:text="Calculate"
-        android:textColor="#FFFFFF" />
-
-    <EditText
-        android:id="@+id/ocrText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/textView1"
-        android:textColor="#FFFFFF"
-        android:ems="10" >
-
-        <requestFocus />
-    </EditText>
-
-    <ImageView
-        android:id="@+id/imageView1"
+    <RelativeLayout
+        android:id="@+id/container_sub"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignTop="@+id/textView1" />
+        android:background="@drawable/bg0" >
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:background="#00000000"
+            android:textSize="20sp" />
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_alignTop="@+id/textView1"
+            android:contentDescription="@string/desc" />
+
+        <EditText
+            android:id="@+id/ocrText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/textView1"
+            android:ems="10"
+            android:inputType="text"
+            android:textColor="#FFFFFF" >
+
+            <requestFocus />
+        </EditText>
+
+        <Button
+            android:id="@+id/startCalcu"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/textView1"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="52dp"
+            android:background="#159b9b"
+            android:onClick="procResult"
+            android:text="@string/calc"
+            android:textColor="#FFFFFF" />
+    </RelativeLayout>
+
+</FrameLayout>
