--- a/Thesis/res/layout/custom_dialog.xml
+++ b/Thesis/res/layout/custom_dialog.xml
@@ -1,80 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="250dp"
-    android:layout_height="280dp"
+    style="@android:style/Theme.Light"
+    android:layout_width="260dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal|center_vertical"
     android:background="@drawable/curv_shape"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:paddingBottom="5dp" >
 
     <TextView
         android:id="@+id/dia_header"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:background="@drawable/curv_head"
         android:gravity="center_horizontal"
         android:text="@string/info_button"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#FFFFFF" />
 
-    <TextView
-        android:id="@+id/dia_subh1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+    <ScrollView
+        android:id="@+id/scroll"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         android:layout_below="@+id/dia_header"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="5dp"
-        android:text="@string/info_head1"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold" />
+        android:layout_margin="5dp" >
 
-    <TextView
-        android:id="@+id/dia_subh2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/dia_subh1"
-        android:layout_below="@+id/dia_subh1"
-        android:layout_marginBottom="5dp"
-        android:text="@string/info_head2"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-    <TextView
-        android:id="@+id/dia_subh3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/dia_subh1"
-        android:layout_below="@+id/dia_subh2"
-        android:layout_marginBottom="5dp"
-        android:text="@string/info_head3"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold" />
+            <TextView
+                android:id="@+id/dia_subh1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/info_head1"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/dia_inf1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/dia_subh1"
-        android:layout_below="@+id/dia_subh3"
-        android:layout_marginLeft="5dp"
-        android:text="@string/contribs"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#FFFFFF" />
+            <TextView
+                android:id="@+id/dia_subh2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/dia_subh1"
+                android:layout_below="@+id/dia_subh1"
+                android:layout_marginBottom="5dp"
+                android:text="@string/info_head2"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/dia_subh3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/dia_subh1"
+                android:layout_below="@+id/dia_subh2"
+                android:layout_marginBottom="5dp"
+                android:text="@string/info_head3"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/dia_inf1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/dia_subh1"
+                android:layout_below="@+id/dia_subh3"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="5dp"
+                android:text="@string/contribs"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#FFFFFF" />
+        </RelativeLayout>
+    </ScrollView>
 
     <Button
         android:id="@+id/dia_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/scroll"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
         android:background="#C45AEC"
         android:onClick="diaClick"
+        android:padding="8dp"
         android:text="@string/OK"
         android:textColor="#FFFFFF" />
 
