--- a/Thesis/res/layout/gallery_page2.xml
+++ b/Thesis/res/layout/gallery_page2.xml
@@ -2,34 +2,36 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center">
-   <com.myapp.thesis.GalleryLinearLayout 
+    android:gravity="center"
+    android:orientation="vertical" >
+
+    <com.myapp.thesis.GalleryLinearLayout
         android:id="@+id/root"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:orientation="vertical"
-	    android:gravity="center" 
-	    android:background="@android:color/transparent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/transparent"
+        android:gravity="center"
+        android:orientation="vertical" >
 
-	    <ImageView
-	        android:id="@+id/gallery_image"
-	        android:layout_width="150dp"
-	        android:layout_height="200dp"
-	        android:layout_alignParentTop="true"
-	        android:layout_centerHorizontal="true"
-	        android:onClick="getImage()"
-	        android:background="#ffffff"
-	        android:scaleType="fitXY"
-	        android:src="@drawable/ic_launcher" />
+        <ImageView
+            android:id="@+id/gallery_image"
+            android:layout_width="150dp"
+            android:layout_height="200dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:background="#ffffff"
+            android:contentDescription="@string/desc"
+            android:onClick="getImage()"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_launcher" />
 
-	    <TextView
-	        android:id="@+id/text"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:text="AAAAAAAAA"
-	        android:textColor="#FFFFFF"
-	        android:textSize="20dp" />
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="AAAAAAAAA"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
+    </com.myapp.thesis.GalleryLinearLayout>
 
-	</com.myapp.thesis.GalleryLinearLayout>
 </LinearLayout>
