--- a/Thesis/res/layout/help_page.xml
+++ b/Thesis/res/layout/help_page.xml
@@ -8,7 +8,7 @@
     tools:context="com.myapp.thesis.CustomHelp"
     tools:ignore="MergeRootFrame" >
 
-    <ViewFlipper
+    <com.myapp.thesis.CustomFlipper
         android:id="@+id/flip"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -146,6 +146,6 @@
                     android:textStyle="bold" />
             </RelativeLayout>
         </FrameLayout>
-    </ViewFlipper>
+    </com.myapp.thesis.CustomFlipper>
 
 </RelativeLayout>
