--- a/Thesis/res/layout/main_page.xml
+++ b/Thesis/res/layout/main_page.xml
@@ -15,6 +15,25 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:src="@null" />
+    
+        <fragment
+        android:id="@+id/MainFragment"
+        android:name="com.myapp.thesis.BlankFragment"
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true" />
+
+    <fragment
+        android:id="@+id/childFragment"
+        android:name="com.myapp.thesis.BlankFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/MainFragment" />
+    
 
     <LinearLayout
         android:id="@+id/linearLayout2"
