--- a/Thesis/res/layout/ocr_result_fragment.xml
+++ b/Thesis/res/layout/ocr_result_fragment.xml
@@ -11,7 +11,7 @@
         android:layout_height="200dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:background="#aa000000"
+        android:background="#dd000000"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
@@ -23,35 +23,41 @@
         android:layout_marginTop="17dp"
         android:text="Formula"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:textSize="30sp" />
 
     <EditText
         android:id="@+id/formula1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView2"
+        android:layout_below="@+id/calculateBtn"
+        android:layout_marginTop="16dp"
         android:ems="10"
-        android:textSize="20dp"
         android:hint="Formula"
         android:text="2x+3y=5 \n5x-y = 2"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:textSize="20dp"
+         />
 
-    <TextView
-        android:id="@+id/textView3"
+    <Button
+        android:id="@+id/calBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView1"
-        android:layout_centerHorizontal="true"
-        android:text="Calculate"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:background="#6BAFF3"
+        android:text="Calculate Now!!"
         android:textColor="#ffffff" />
 
     <ImageView
         android:id="@+id/calculateBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textView3"
-        android:layout_centerHorizontal="true"
+        android:layout_alignTop="@+id/textView2"
+        android:layout_marginLeft="16dp"
+        android:layout_toRightOf="@+id/textView2"
         android:src="@drawable/calculator" />
 
 </RelativeLayout>
